# monitor

./: Cargo.toml
cli/: Cargo.toml
cli/src/: helpers.rs
core/: Cargo.toml
core/src/: cache.rs  config.rs  helpers.rs  main.rs  monitoring.rs  state.rs
core/src/actions/: build.rs  command.rs  deployment.rs  group.rs  mod.rs  procedure.rs  server.rs
core/src/api/: build.rs  command.rs  deployment.rs  github_listener.rs  group.rs  mod.rs  permissions.rs  procedure.rs  secret.rs  server.rs  update.rs
core/src/auth/: github.rs  google.rs  jwt.rs  local.rs  mod.rs  secret.rs
core/src/cloud/: aws.rs
core/src/ws/: mod.rs  stats.rs  update.rs
docsite/: docusaurus.config.js
frontend/src/: types.ts
frontend/src/util/: client.ts  client_types.ts
lib/axum_oauth2/: Cargo.toml
lib/axum_oauth2/src/: google.rs
lib/db_client/: Cargo.toml
lib/db_client/src/: collections.rs  lib.rs
lib/helpers/: Cargo.toml
lib/helpers/src/: lib.rs
lib/monitor_client/: Cargo.toml
lib/monitor_client/src/: deployment.rs  group.rs  procedure.rs  server.rs
lib/periphery_client/: Cargo.toml
lib/periphery_client/src/: build.rs  command.rs  container.rs  git.rs  image.rs  lib.rs  network.rs
lib/types/: Cargo.toml
lib/types/src/: alert.rs  build.rs  deployment.rs  lib.rs  procedure.rs  server.rs  traits.rs  update.rs
periphery/: Cargo.toml
periphery/src/: config.rs  main.rs
periphery/src/api/: accounts.rs  build.rs  command.rs  container.rs  git.rs  guard.rs  image.rs  mod.rs  network.rs  stats.rs
periphery/src/helpers/: git.rs  mod.rs
periphery/src/helpers/docker/: build.rs  client.rs  container.rs  network.rs
