[workspace]
members = ["cli", "core", "periphery", "tests", "lib/*"]

[workspace.package]
version = "0.3.5"
edition = "2021"
authors = ["mbecker20 <becker.maxh@gmail.com>"]
license = "GPL-3.0-or-later"

[workspace.dependencies]
# local
monitor_helpers = { path = "lib/helpers" }
monitor_types = { path = "lib/types" }
db_client = { path = "lib/db_client" }
periphery_client = { path = "lib/periphery_client" }
axum_oauth2 = { path = "lib/axum_oauth2" }
# public
tokio = { version = "1.28", features = ["full"] }
axum = { version = "0.6", features = ["ws", "json", "headers"] }
tower = { version = "0.4", features = ["timeout"] }
tower-http = { version = "0.4", features = ["fs", "cors"] }
tokio-tungstenite = { version = "0.19", features=["native-tls"] }
clap = { version = "4.3", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-util = "0.7"
futures = "0.3"
futures-util = "0.3"
dotenv = "0.15"
envy = "0.4"
anyhow = "1.0"
bollard = "0.14.0"
sysinfo = "0.29"
urlencoding = "2.1"
rand = "0.8"
jwt = "0.16"
bson = "2.6"
strum = "0.24"
strum_macros = "0.24"
diff-struct = "0.5"
derive_builder = "0.12"
typeshare = "1.0.1"
chrono = "0.4"
bcrypt = "0.14"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
aws-config = "0.55.2"
aws-sdk-ec2 = "0.28.0"
toml = "0.7"
colored = "2"
# mine
run_command = { version = "0.0.6", features = ["async_tokio"] }
slack = { package = "slack_client_rs", version = "0.0.8" }
merge_config_files = "0.1.3"
parse_csl = "0.1.0"
async_timing_util = "0.1.14"
mungos = "0.3.20"
svi = "0.1.4"
termination_signal = "0.1.2"