[package]
name = "monitor_cli"
version = "0.3.4"
edition = "2021"
authors = ["MoghTech"]
description = "monitor cli | tools to setup monitor system"
license = "GPL-3.0-or-later"

[[bin]]
name = "monitor"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
monitor_types.workspace = true
clap.workspace = true
async_timing_util.workspace = true
rand.workspace = true
serde.workspace = true
toml.workspace = true
run_command.workspace = true
colored.workspace = true
strum.workspace = true
strum_macros.workspace = true