[package]
name = "core"
version = "0.3.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
monitor_helpers.workspace = true
monitor_types.workspace = true
db_client.workspace = true
periphery_client.workspace = true
axum_oauth2.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
tokio-util.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
slack.workspace = true
futures-util.workspace = true
mungos.workspace = true
serde.workspace = true
serde_json.workspace = true
dotenv.workspace = true
envy.workspace = true
anyhow.workspace = true
bcrypt.workspace = true
jwt.workspace = true
hmac.workspace = true
sha2.workspace = true
async_timing_util.workspace = true
diff-struct.workspace = true
typeshare.workspace = true
hex.workspace = true
aws-config.workspace = true
aws-sdk-ec2.workspace = true
merge_config_files.workspace = true
termination_signal.workspace = true