[package]
name = "monitor_periphery"
description = "monitor periphery client"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "periphery"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
monitor_helpers.workspace = true
monitor_types.workspace = true
tokio.workspace = true
axum.workspace = true
tower.workspace = true
clap.workspace = true
futures.workspace = true
run_command.workspace = true
dotenv.workspace = true
serde.workspace = true
serde_json.workspace = true
bollard.workspace = true
anyhow.workspace = true
envy.workspace = true
sysinfo.workspace = true
async_timing_util.workspace = true
svi.workspace = true
merge_config_files.workspace = true
parse_csl.workspace = true
