[package]
name = "axum_oauth2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum.workspace = true
reqwest.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
urlencoding.workspace = true
rand.workspace = true
jwt.workspace = true