[package]
name = "monitor_helpers"
version = "0.3.4"
edition = "2021"
authors = ["MoghTech"]
description = "helpers used as dependency for mogh tech monitor"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
monitor_types.workspace = true
anyhow.workspace = true
axum.workspace = true
rand.workspace = true
