[package]
name = "monitor_client"
version = "0.3.4"
edition = "2021"
authors = ["MoghTech"]
description = "a client to interact with the monitor system"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
monitor_types = "0.3.4"
# monitor_types.workspace = true
reqwest.workspace = true
tokio-tungstenite.workspace = true
tokio.workspace = true
tokio-util.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
futures-util.workspace = true
envy.workspace = true