[package]
name = "monitor_types"
version = "0.3.4"
edition = "2021"
authors = ["MoghTech"]
description = "types for the mogh tech monitor"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde.workspace = true
bson.workspace = true
strum.workspace = true
strum_macros.workspace = true
diff-struct.workspace = true
bollard.workspace = true
derive_builder.workspace = true
typeshare.workspace = true
chrono.workspace = true
anyhow.workspace = true